--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6,6 +6,61 @@
     font-family: "Poppins", sans-serif;
 }
 
-h1{
-    background-color: blue;
+section{
+    max-width: 1160px;
+    margin: 0 auto;
 }
+
+img{
+    width: 100%;
+    object-fit: cover;
+}
+
+.primary-button{
+    background-color: rgb(224, 44, 109);
+    padding: 0.625rem 1.5rem;
+    color: white;
+    border: none;
+}
+
+/* header related styles starts */
+header{
+    background-color: rgb(45, 37, 160);
+    color: white;
+}
+
+.header-main-container{
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+}
+
+/* navbar related styles starts */
+nav{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.nav-items{
+    display: flex;
+    gap: 2rem;
+    align-items: center;
+}
+.menu{
+    display: none;
+}
+/* navbar related styles ends */
+
+/* hero section related styles starts */
+.hero-container{
+    margin-top: 3rem;
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    align-items: center;
+}
+.hero-container h1{
+    font-size: 4rem;
+    max-width: 485px;
+}
+/* hero section related styles ends*/
+
+/* header related styles ends*/
