--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,11 +4,15 @@
     margin: 0;
     padding: 0;
     font-family: "Poppins", sans-serif;
+    box-sizing: border-box;
 }
 
 section{
     max-width: 1160px;
     margin: 0 auto;
+}
+#players-container{
+    margin-top: 3rem;
 }
 
 img{
@@ -16,12 +20,21 @@ img{
     object-fit: cover;
 }
 
+.text-container p{
+    color: #6C6C6C;
+}
+
 .primary-button{
     background-color: rgb(224, 44, 109);
     padding: 0.625rem 1.5rem;
     color: white;
     border: none;
+    display: flex;
+    gap: .5rem;
+    align-items: center;
+    cursor: pointer;
 }
+
 
 /* header related styles starts */
 header{
@@ -64,3 +77,28 @@ nav{
 /* hero section related styles ends*/
 
 /* header related styles ends*/
+
+
+/* cards related styles starts */
+#players-container{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    gap: 1.875rem;
+}
+
+.img-container{
+    display: flex;
+}
+
+.player-card{
+    padding: 1rem;
+    box-shadow: 0px 0px 40px 0px rgba(0, 0, 0, 0.15);
+    /* max-height: 474px; */
+}
+.player-card h2{
+    margin: 1rem 0 .6rem 0;
+    color: rgb(24, 25, 31);
+}
+
+
+/* cards related styles ends */
