--- a/styles/styles.css
+++ b/styles/styles.css
@@ -64,7 +64,7 @@ nav{
 /* navbar related styles ends */
 
 /* hero section related styles starts */
-.hero-container{
+.hero-container, #highlights{
     margin-top: 3rem;
     display: grid;
     grid-template-columns: repeat(2,1fr);
@@ -99,6 +99,22 @@ nav{
     margin: 1rem 0 .6rem 0;
     color: rgb(24, 25, 31);
 }
-
-
 /* cards related styles ends */
+
+/* highlights section related style start */
+.highlight-text{
+    padding-right: 6rem;
+}
+.highlight-text h1{
+    font-weight: 700;
+    font-size: 3rem;
+    line-height: 3.75rem;
+}
+.highlight-text p{
+    line-height: 1.5rem;
+    color: rgb(108, 108, 108);
+    margin-top: .5rem;
+    margin-bottom: 1.5rem;
+}
+/* highlights section related style end */
+
