--- a/styles/styles.css
+++ b/styles/styles.css
@@ -11,7 +11,7 @@ section{
     max-width: 1160px;
     margin: 0 auto;
 }
-#players-container{
+#players-container, #footer{
     margin-top: 3rem;
 }
 
@@ -118,3 +118,22 @@ nav{
 }
 /* highlights section related style end */
 
+/* footer related styles starts */
+#footer{
+    max-width: 483px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 3rem;
+}
+
+.icons-container{
+    margin: 1.25rem 0 1.25rem 0;
+    display: flex;
+    gap: 0.85rem;
+}
+.icon{
+    height: 2rem;
+    width: 2rem;
+}
